#include "backend_master_kv_service_impl.hpp"

grpc::Status BackendMasterKVServiceImpl::CheckNodeHealth(grpc::ServerContext* context, const penncloud::backend::HealthCheckRequest* request, penncloud::backend::HealthCheckResponse* response) {
    // Implement health check logic
    response->set_ishealthy(true); // Example response
    return grpc::Status::OK;
}

// Implement additional methods for backend node management
